--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,33 @@
+html,
+body {
+  color: white;
+  background-color: #eeb5b5;
+  font-family: Lato, sans-serif;
+  margin-top: 40px;
 
-/* 
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+h1 {
+  color: #1b1b32;
+  font-size: 50px;
+  font-family: Roboto, sans-serif;
+  text-align: center;
+  margin: 20px 0;
+}
 
-*/
+.contenedor-tareas {
+  width: 600px;
+  min-height: 500px;
+  background-color: #f9f9f9;
+  padding: 25px;
+  margin: 10px 0 0 35%;
+  border-radius: 25px;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.footer-container{
+  padding-left: 220px;
+}
